--- a/mediplus_backend/app/static/app/css/styles.css
+++ b/mediplus_backend/app/static/app/css/styles.css
@@ -88,12 +88,14 @@ body {
 }
 
 .carousel-item {
-	height: 32rem;
+	/*height: 32rem;*/
+    height: 90vh;
 }
 .carousel-item > img {
 	position: absolute;
 	top: 0;
 	left: 0;
 	min-width: 100%;
-	height: 32rem;
+	/*height: 32rem;*/
+    height: 90vh;
 }
