--- a/mediplus_backend/app/templates/app/navbar.html
+++ b/mediplus_backend/app/templates/app/navbar.html
@@ -34,7 +34,7 @@
     # Header
     --------------------------------------------------------------*/
     #header {
-    background: linear-gradient(45deg, rgba(86, 58, 250, 0.9) 0%, rgba(0, 255, 255, 0.9) 100%), url("../img/hero-bg.jpg") center center no-repeat;
+    background: linear-gradient(45deg, rgba(86, 58, 250, 0.9) 0%, rgba(0, 255, 255, 0.9) 100%)/*, url("../img/hero-bg.jpg") center center no-repeat*/;
     transition: all 0.5s;
     z-index: 997;
     padding: 20px 0;
