did the forms well

--- a/mediplus_backend/app/templates/app/index.html
+++ b/mediplus_backend/app/templates/app/index.html
@@ -16,8 +16,8 @@
 
         <div class="container">
         <div class="carousel-caption text-start">
-            <h1>Sahara Engineering Equipment</h1>
-            <p>Welcome to Sahara Engineering Equipment, your dear one stop shop for all your engineering machinery, tools and parts!</p>
+            <h1>{{company.name}}</h1>
+            <p>Welcome to {{company.name}}, your dear one stop shop for all your pharmaciticaul and medical needs!</p>
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Get started</a></p>
         </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="container">
         <div class="carousel-caption">
             <h1>Shop online, anywhere any time!</h1>
-            <p>With Sahara Engineering Equipment you are one click away from the provision of all your engineering services and products!</p>
+            <p>With {{company.name}} you are one click away from the provision of all your medical services and products!</p>
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Start Now</a></p>
         </div>
         </div>
@@ -38,8 +38,8 @@
 
         <div class="container">
         <div class="carousel-caption text-end">
-            <h1>A Plus, first class engineering solutions</h1>
-            <p>Get in touch with us for your next civil, mechanichal, electrical, mining or chemical engineering project!</p>
+            <h1>Mediplus motto</h1>
+            <p>Get in touch with us !</p>
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Ping Us</a></p>
         </div>
         </div>
