failed to succesfully implement add image logic

--- a/mediplus_backend/app/templates/app/login.html
+++ b/mediplus_backend/app/templates/app/login.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-md-12 mb-4">
                         <div class="form-floating">
-                            <input type="email" class="form-control" id="email" placeholder="name@example.com" aria-describedby="emailHelp" autofocus />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" aria-describedby="emailHelp" autofocus />
                             <label for="email">Email address</label>
                         </div>
                         <div id="emailHelp" class="form-text text-end text-info">Your Email</div>
