mmmmmm not so bad

--- a/mediplus_backend/app/templates/app/index.html
+++ b/mediplus_backend/app/templates/app/index.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% block body %}
   
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+<section id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <ol class="carousel-indicators">
     <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
     <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
@@ -53,5 +53,5 @@
     <span class="bx bx-right-arrow" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
     </a>
-</div>
+</section>
 {% endblock body %}
