--- a/mediplus_backend/app/templates/app/login.html
+++ b/mediplus_backend/app/templates/app/login.html
@@ -11,14 +11,14 @@
                 <div class="row">
                     <div class="col-md-12 mb-4">
                         <div class="form-floating">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" aria-describedby="emailHelp" autofocus />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" aria-describedby="emailHelp" autofocus  required minlength="4" maxlength="128" />
                             <label for="email">Email address</label>
                         </div>
                         <div id="emailHelp" class="form-text text-end text-info">Your Email</div>
                     </div>
                     <div class="col-md-12 mb-4">
                         <div class="form-floating">
-                            <input type="password" name="password" class="form-control" id="password" placeholder="p@$$kode" aria-describedby="passwordHelp" />
+                            <input type="password" name="password" class="form-control" id="password" placeholder="p@$$kode" aria-describedby="passwordHelp" required minlength="8" maxlength="16" />
                             <label for="password">Password</label>
                         </div>
                         <div id="passwordHelp" class="form-text text-end text-info">Your Password</div>
