--- a/mediplus_backend/app/templates/app/layout.html
+++ b/mediplus_backend/app/templates/app/layout.html
@@ -40,6 +40,7 @@
             <input type="text" name="current-user-name" id="current-user-name" value="{{request.user.username}}">
             <input type="text" name="active-cart-name" id="active-cart-name" value="{{request.user.active_cart.name}}">
         </form>
+        {% include "app/snackbar.html" %}
         <!--Pre loader-->
         <div id="preloader"></div>
         <!--JS static files-->
