--- a/mediplus_backend/app/templates/app/layout.html
+++ b/mediplus_backend/app/templates/app/layout.html
@@ -46,6 +46,20 @@
                 <button type="button" class="btn-close" aria-label="Close"></button>
             </div>
         </div>
+        <div class="alertbar fixed-bottom mx-auto fade show">
+            <div class="alert alert-dismissible alert-dark" role="alert">
+                <p class="text-center">
+                    <span class="alertbar-question"></span>
+                    <button class="btn btn-sm btn-success positive">
+                        <i class="bx bx-circle"></i>
+                    </button>
+                    <button class="btn btn-sm btn-danger negative">
+                        <i class="bx bx-x"></i>
+                    </button>
+                </p>
+                <button type="button" class="btn-close" aria-label="Close"></button>
+            </div>
+        </div>
         <!--Pre loader-->
         <div id="preloader"></div>
         <!--JS static files-->
